@@ -5,6 +5,7 @@
   - cache template object of {include} if same template is included several times
   - convert debug console processing to object
   - use output buffers for better performance and less memory usage
+  - optimize nocache hash processing
 
  06.08.2015
   - avoid possible circular object references caused by parser/lexer objects
